# shadps4-qtlauncher

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  REUSE.toml
.github/: linux-appimage-qt.sh  linux-appimage-sdl.sh
.github/ISSUE_TEMPLATE/: app-bug-report.yaml
.github/workflows/: build.yml  update_translation.yml
documents/: building-linux.md  building-macos.md  building-windows.md
documents/Debugging/: Debugging.md
src/: emulator.cpp  emulator.h  main.cpp  shadps4.qrc  shadps4.rc
src/common/: assert.cpp  bitlocker.cpp  bitlocker.h  bounded_threadsafe_queue.h  config.cpp  config.h  debug.h  io_file.cpp  io_file.h  key_manager.cpp  key_manager.h  log_analyzer.cpp  log_analyzer.h  memory_patcher.cpp  memory_patcher.h  number_utils.cpp  path_util.cpp  path_util.h  scm_rev.cpp.in  scm_rev.h  versions.cpp  versions.h
src/common/logging/: backend.cpp  filter.cpp  log.cpp  log.h  thread_name_formatter.h  types.h
src/core/: debug_state.cpp  debug_state.h  emulator_settings.cpp  emulator_settings.h  emulator_state.cpp  emulator_state.h  memory_patcher.cpp  memory_patcher.h  module.h  user_manager.cpp  user_manager.h  user_settings.cpp
src/core/file_format/: elf.cpp  elf.h  trp.cpp  trp.h
src/core/file_sys/: fs.cpp  fs.h
src/core/ipc/: ipc.cpp
src/core/libraries/audio/: audioout.h
src/core/libraries/playgo/: playgo.h
src/input/: controller.cpp  controller.h  input.cpp  input.h  input_handler.h
src/ipc/: ipc_client.cpp  ipc_client.h
src/qml/: AboutDialog.qml  AboutIcon.qml
src/qml/shaders/: invert.frag
src/qt_gui/: about_dialog.cpp  about_dialog.h  about_dialog.ui  apple.h  apple.mm  cheats_patches.cpp  cheats_patches.h  check_update.cpp  cli_options.cpp  cli_options.h  compatibility_info.cpp  compatibility_info.h  configurable_patches.cpp  configurable_patches.h  control_settings.cpp  control_settings.h  control_settings.ui  create_shortcut.cpp  create_shortcut.h  create_steam_shortcut.cpp  create_steam_shortcut.h  crypto_key_dialog.cpp  crypto_key_dialog.h  dimensions_dialog.cpp  dimensions_dialog.h  elf_viewer.h  game_grid_frame.cpp  game_grid_frame.h  game_info.cpp  game_info.h  game_install_dialog.cpp  game_install_dialog.h  game_list_frame.cpp  game_list_frame.h  game_list_utils.h  gui_context_menus.h  gui_settings.cpp  gui_settings.h  hex_plain_text_edit.h  hotkeys.cpp  (+39 more)
src/qt_gui/translations/: ar_SA.ts  ca_ES.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  el_GR.ts  en_US.ts  es_ES.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  hr_HR.ts  hu_HU.ts  id_ID.ts  it_IT.ts  ja_JP.ts  ko_KR.ts  lt_LT.ts  nb_NO.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  sl_SI.ts  sq_AL.ts  sr_CS.ts  sv_SE.ts  tr_TR.ts  uk_UA.ts  ur_PK.ts  vi_VN.ts  zh_CN.ts  zh_TW.ts
